# tree-sitter-llvm

./: Cargo.toml  tree-sitter.json
bindings/c/: tree-sitter-llvm.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc
bindings/python/tree_sitter_llvm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
