[package]
name = "tree-sitter-llvm"
description = "Tree sitter parser for LLVM"
version = "1.0.0"
authors = ["Benjamin Graham"]
license = "ISC"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "llvm"]
categories = ["parsing", "text-editors"]
repository = "git+https://github.com/benwilliamgraham/tree-sitter-llvm.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
